package app;

public interface IGame {
    void launch();
}
