package app;

public interface IShip {
}
