@startuml

title __APP's Class Diagram__\n

      class app.BattleShips {
          + launch()
          - init()
          - startMainCycle()
      }




      class app.BattleShipsTest {

  }


      interface app.Controller {
          {abstract} + focus()
          {abstract} + invokeFirstLaunch()
          {abstract} + setModel()

  }


      class app.DefaultController {
          + focus()
          + invokeFirstLaunch()
          + setModel()
  }


      class app.DefaultModel {
          - ships : List<IShip>
          - shipsAlive : List<IShip>
          + isGameEnded()
          + update()
  }


      class app.DefaultView {
          + setModel()
          + update()
  }


      interface app.IGame {
          {abstract} + launch()

  }


      interface app.IShip {
  }

      interface app.Model {
          {abstract} + isGameEnded()
          {abstract} + update()
  }



      interface app.View {
          {abstract} + setModel()
          {abstract} + update()

  }


  app.BattleShips .up.|> app.IGame
  app.BattleShips o-- app.Controller : controller
  app.BattleShips o-- app.Model : model
  app.BattleShips o-- app.View : view
  app.BattleShipsTest -up-|> junit.framework.TestCase
  app.DefaultController .up.|> app.Controller
  app.DefaultController o-- app.Model : model
  app.DefaultModel .up.|> app.Model
  app.DefaultView .up.|> app.View
  app.DefaultView o-- app.Model : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
